Closed
Bug 868826
Opened 12 years ago
Closed 12 years ago
Firefox Mobile JB devices have lost H.264/MP3 support as of May 5th
Categories
(Core :: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla23
People
(Reporter: markus.popp, Assigned: cajbir)
References
(Depends on 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
|
1.81 KB,
patch
|
bjacob
:
review+
akeybl
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
The Mobile Nightly of 2013-05-05 has lost support for H.264/MP3, as seen on a SGS with Android 4.1.2.
Updated•12 years ago
|
Component: General → Video/Audio
Product: Firefox for Android → Core
Version: Firefox 23 → Trunk
Comment 1•12 years ago
|
||
Dupe of bug 866080? Check your log-cat when you play a video. Which Samsung Galaxy phone?
| Reporter | ||
Comment 2•12 years ago
|
||
Samsung Galaxy S2 (sorry, forgot the 2).
| Reporter | ||
Comment 3•12 years ago
|
||
(In reply to Aaron Train [:aaronmt] from comment #1)
> Dupe of bug 866080?
I don't think so, at least not particularly the issue that I am seeing. Bug 866080 started earlier, I saw the problem on my SGS2 only today (May 5th), and it certainly worked a few days earlier (probably still worked on May 4th, almost certainly on May 3rd).
Comment 4•12 years ago
|
||
Didn't we just blacklist a bunch of Samsung devices from video decoding?
Flags: needinfo?(chris.double)
| Assignee | ||
Comment 5•12 years ago
|
||
What is your model number shown in "Settings, About Device"?. Currently blocked devices are:
https://wiki.mozilla.org/Blocklisting/Blocked_Graphics_Drivers#On_Android_2
Flags: needinfo?(chris.double) → needinfo?(markus.popp)
| Reporter | ||
Comment 6•12 years ago
|
||
(In reply to Chris Double (:doublec) from comment #5)
> What is your model number shown in "Settings, About Device"?. Currently
> blocked devices are:
>
> https://wiki.mozilla.org/Blocklisting/Blocked_Graphics_Drivers#On_Android_2
GT-I9100
Flags: needinfo?(markus.popp)
Comment 7•12 years ago
|
||
There are many variants of GT-I9100 with different hardware; can you download and install the Android SDK and run $ adb shell cat proc/cpuinfo ? You'll see 'Hardware : SMDK4210' for example.
| Reporter | ||
Comment 8•12 years ago
|
||
SMDK4210 it is.
Comment 9•12 years ago
|
||
I have the same GT-I9100/SMDK4210 and testing via: http://cd.pn/b as an example, that works for me (Nightly 05/06); default preferences in a new profile. Also testing via http://people.mozilla.com/~atrain/mobile/tests/media.html; all media on the page works for me on my Galaxy SII (Android 4.0.4).
Updated•12 years ago
|
tracking-fennec: --- → ?
| Reporter | ||
Comment 10•12 years ago
|
||
Not so here:
http://media.mpopp.net/sgs2_h264_video.png
My SGS2 runs Android 4.1.2, maybe that being the difference?
I even reset the Nightly (from today, May 6) to make sure it's using default settings.
| Assignee | ||
Comment 12•12 years ago
|
||
See bug 869286 comment 11. All JB devices are currently blocklisted due to an error.
| Assignee | ||
Updated•12 years ago
|
Summary: Firefox Mobile Nightly of May 5th lost H.264/MP3 support → Firefox Mobile Nightly on JB devices of May 5th lost H.264/MP3 support
| Assignee | ||
Comment 13•12 years ago
|
||
Updated•12 years ago
|
status-firefox20:
--- → unaffected
status-firefox21:
--- → affected
status-firefox22:
--- → affected
status-firefox23:
--- → affected
tracking-firefox21:
--- → ?
Keywords: regression
Comment 15•12 years ago
|
||
Comment on attachment 746761 [details] [diff] [review]
Fix blocklist check for JB
Review of attachment 746761 [details] [diff] [review]:
-----------------------------------------------------------------
Sorry, as reviewer I should have caught this the first time.
Attachment #746761 -
Flags: review?(bjacob) → review+
Comment 16•12 years ago
|
||
This will need uplift to Aurora/Beta.
Comment 17•12 years ago
|
||
Regression from bug 853522.
Comment 18•12 years ago
|
||
(In reply to Aaron Train [:aaronmt] from comment #16)
> This will need uplift to Aurora/Beta.
The current Beta 7 is supposed to be the Release Candidate!
| Reporter | ||
Comment 19•12 years ago
|
||
(In reply to Scoobidiver from comment #18)
> The current Beta 7 is supposed to be the Release Candidate!
Firefox 21, due for release next week, is affected. And I think it's a very bad thing if a final release loses a major functionality which was previously available.
Updated•12 years ago
|
Updated•12 years ago
|
Summary: Firefox Mobile Nightly on JB devices of May 5th lost H.264/MP3 support → Firefox Mobile JB devices have lost H.264/MP3 support as of May 5th
| Assignee | ||
Comment 20•12 years ago
|
||
status-firefox20:
unaffected → ---
status-firefox21:
affected → ---
status-firefox22:
affected → ---
status-firefox23:
affected → ---
tracking-firefox21:
+ → ---
| Assignee | ||
Comment 21•12 years ago
|
||
Grrr, bugzilla, why you reset flags?
status-firefox20:
--- → unaffected
status-firefox21:
--- → affected
status-firefox22:
--- → affected
status-firefox23:
--- → affected
| Assignee | ||
Updated•12 years ago
|
tracking-firefox21:
--- → ?
| Reporter | ||
Comment 22•12 years ago
|
||
(In reply to Chris Double (:doublec) from comment #20)
> https://hg.mozilla.org/integration/mozilla-inbound/rev/0d2ce5b020cf
I don't see GT-I9100 listed in this patch which is my device (SGS2) which is affected. Is this by mistake?
| Assignee | ||
Comment 23•12 years ago
|
||
Comment on attachment 746761 [details] [diff] [review]
Fix blocklist check for JB
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 853522
User impact if declined: JB phones won't play H.264 video
Testing completed (on m-c, etc.): Tested on JB phones
Risk to taking this patch (and alternatives if risky): Might enable/disable incorrect devices if the patch is wrong
String or IDL/UUID changes made by this patch: None
Attachment #746761 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 24•12 years ago
|
||
Comment on attachment 746761 [details] [diff] [review]
Fix blocklist check for JB
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 853522
User impact if declined: JB phones won't play H.264 video
Testing completed (on m-c, etc.): Tested on JB phones
Risk to taking this patch (and alternatives if risky): Might enable/disable incorrect devices if the patch is wrong
String or IDL/UUID changes made by this patch: None
Attachment #746761 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 25•12 years ago
|
||
(In reply to Markus Popp from comment #22)
>
> I don't see GT-I9100 listed in this patch which is my device (SGS2) which is
> affected. Is this by mistake?
The regression caused disabling of almost all JB devices, including yours even though it's not listed. The fix ensure the specific crashing devices are blocked and yours is not one of those so wouldn't be listed .
Comment 26•12 years ago
|
||
What doesn't make sense to me is that playback currently works on Nightly (05/08) on, for example, my LG Nexus 4 (Android 4.2.2) via → http://cd.pn/b/ as well as my Galaxy Note II (Android 4.1.2).
Comment 27•12 years ago
|
||
The Beta patch must be different as the patch of bug 812881 hasn't landed in 21.0 and shouldn't even have landed at all.
Comment 28•12 years ago
|
||
On the other hand, I have an Alcatel One Touch 8008X (MT6589), running Android 4.1.2 and it *is* currently blocked on Nightly (05/08).
| Assignee | ||
Comment 29•12 years ago
|
||
(In reply to Aaron Train [:aaronmt] from comment #26)
> What doesn't make sense to me is that playback currently works on Nightly
> (05/08) on, for example, my LG Nexus 4 (Android 4.2.2) via → http://cd.pn/b/
> as well as my Galaxy Note II (Android 4.1.2).
We don't block 4.2.x, only 4.1.x. Your Note 2 will work if it matches exactly one of the blocking strings. The bug is basically it blocklists everything except for those devices.
Updated•12 years ago
|
Comment 30•12 years ago
|
||
My mistake, I see that now in GfxInfo http://mxr.mozilla.org/mozilla-central/source/widget/android/GfxInfo.cpp#466
| Assignee | ||
Comment 31•12 years ago
|
||
Comment on attachment 746761 [details] [diff] [review]
Fix blocklist check for JB
We're backing out on beta instead in bug 853522.
Attachment #746761 -
Flags: approval-mozilla-beta?
Comment 32•12 years ago
|
||
(In reply to Chris Double (:doublec) from comment #31)
> We're backing out on beta instead in bug 853522.
It will add again a top crasher.
Between overblocklisting and underblocklisting, there's a middle size solution which is to land the patch without the block of bug 812881 in Beta.
Updated•12 years ago
|
Comment 33•12 years ago
|
||
(In reply to Scoobidiver from comment #32)
> (In reply to Chris Double (:doublec) from comment #31)
> > We're backing out on beta instead in bug 853522.
> It will add again a top crasher.
>
> Between overblocklisting and underblocklisting, there's a middle size
> solution which is to land the patch without the block of bug 812881 in Beta.
well, Its slightly unclear as i do not see any fwd fixes in 812881 other than the blocklist patch up there & adding any new blocklisting is off the table at this point as we are so close to release and making sure we get the needed qualification from QA for new blocklist that would be added.
Updated•12 years ago
|
Comment 34•12 years ago
|
||
(In reply to bhavana bajaj [:bajaj] from comment #33)
> well, Its slightly unclear as i do not see any fwd fixes in 812881 other
> than the blocklist patch up there
Bug 812881 has been fixed by its own in 20.0 without any patch. The patch of bug 812881 in 22.0 and above removes a feature that worked well.
Comment 35•12 years ago
|
||
(In reply to Markus Popp from comment #19)
> (In reply to Scoobidiver from comment #18)
> > The current Beta 7 is supposed to be the Release Candidate!
>
> Firefox 21, due for release next week, is affected. And I think it's a very
> bad thing if a final release loses a major functionality which was
> previously available.
We have spun another beta to resolve this with a backout patch in Bug 853522 , and will be rebuilding the final RC as well .
Can you please try our latest beta from ftp : ftp://ftp.mozilla.org/pub/mozilla.org/mobile/candidates/21.0b8-candidates/build1/android/ and see if that works for you now?
| Reporter | ||
Comment 36•12 years ago
|
||
(In reply to bhavana bajaj [:bajaj] from comment #35)
> Can you please try our latest beta from ftp :
> ftp://ftp.mozilla.org/pub/mozilla.org/mobile/candidates/21.0b8-candidates/
> build1/android/ and see if that works for you now?
This build works fine. Thanks for acting so quickly, much appreciated.
Comment 37•12 years ago
|
||
Verifying the fix works on mozilla-beta 21.0b8 on an Alcatel One Touch 8008X (Android 4.1.2); and on my Galaxy Tab 2 7.0 (GT-P3110, Android 4.1.1).
Comment 38•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Comment 39•12 years ago
|
||
Marking verified in 21.0b8 based on bug 853522 comment 53.
Updated•12 years ago
|
Status: RESOLVED → VERIFIED
Updated•12 years ago
|
Attachment #746761 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 40•12 years ago
|
||
Comment on attachment 746761 [details] [diff] [review]
Fix blocklist check for JB
Approving for Beta 22
Attachment #746761 -
Flags: approval-mozilla-aurora+ → approval-mozilla-beta+
Comment 41•12 years ago
|
||
Updated•12 years ago
|
Updated•12 years ago
|
tracking-fennec: ? → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•