Bug 868826 - Fix stagefright blocklist for JB devices - r=bjacob